@@ -121,6 +121,7 @@
 			<label index="common_version_name">Community</label>
 			<label index="common_service_id">Service ID</label>
 			<label index="common_language">Language</label>
+			<label index="common_ok">OK</label>
 
 			<label index="action_back_to_list">Back to list</label>
 
@@ -263,6 +264,7 @@
 			<label index="common_version_name">Gemeinschaft</label>
 			<label index="common_service_id">Service ID</label>
 			<label index="common_language">Sprache</label>
+			<label index="common_ok">OK</label>
 
 			<label index="action_back_to_list">Zurück zur Liste</label>
 
@@ -405,6 +407,7 @@
 			<label index="common_version_name">Communauté</label>
 			<label index="common_service_id">Service ID</label>
 			<label index="common_language">Langue</label>
+			<label index="common_ok">OK</label>
 
 			<label index="action_back_to_list">Retour à la liste</label>
 
@@ -544,6 +547,8 @@
 			<label index="common_version_id">Versione</label>
 			<label index="common_version_name">Community</label>
 			<label index="common_service_id">ID del servizio</label>
+			<label index="common_language">Lingua</label>
+			<label index="common_ok">OK</label>
 
 			<label index="action_back_to_list">Ritorna alla lista</label>
 
