@@ -10,6 +10,7 @@
 
 <form id="tx_egovapi_selectorForm">
 	<input type="hidden" id="tx_egovapi_ajaxUrl" value="###AJAX_URL###" />
+	<input type="hidden" id="tx_egovapi_defaultLanguage" value="###LANGUAGE###" />
 	<div id="tx_egovapi_selectorForm_community">
 		<label for="tx_egovapi_community">###LABEL_COMMUNITY###</label>
 		<!-- ###COMMUNITIES### [begin] -->
@@ -80,7 +81,7 @@
 		</select>
 		<!-- ###LANGUAGES### [end] -->
 	</div>
-	<input type="button" id="tx_egovapi_selectorForm_submit" value="OK" />
+	<input type="button" id="tx_egovapi_selectorForm_submit" value="###LABEL_OK###" />
 
 	<div id="tx_egovapi_result"></div>
 </form>
